--- a/web-interface/frontend/web-interface/package.json
+++ b/web-interface/frontend/web-interface/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.6.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
