--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.6.0",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
