--- a/services/api-server/tsconfig.json
+++ b/services/api-server/tsconfig.json
@@ -16,8 +16,9 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
